# test-task-weather-dashboard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  wsgi.py
src/: __init__.py  config.py  models.py
src/index/: autocomplete.py  index.py  search_history.py  views.py
src/static/css/: styles.css
src/templates/: index.html
tests/: test_app.py
