[tool.poetry]
name = "test-task-weather-dashboard"
version = "0.1.0"
description = ""
authors = ["Mikhail Orlov <crazyminer398@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-restful = "^0.3.10"
requests = "^2.32.3"
flask-sqlalchemy = "^3.1.1"
flask-cors = "^4.0.1"
python-dotenv = "^1.0.1"
flask-migrate = "^4.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[tool.pytest.ini_options]
pythonpaths = [
    "."
]
testpaths = [
    "tests"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
